Fix bug with sub-nav still being visible in Firefox on pages where sub-nav is not used.

--- a/app/components/sub-nav/style.scss
+++ b/app/components/sub-nav/style.scss
@@ -16,6 +16,11 @@ $animation-time: 0.333s;
   position:fixed;
   top:0;
   z-index:35;
+  display:none;
+  
+  &.active {
+    display:block;
+  }
   
   @media #{$tablet-tall-and-down} {
     
